infra/k8s/obs/base/ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: obs
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
  selector:
    app: obs-server

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: obs
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: obs
          servicePort: 80
